--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+ 
+body {
+    margin: 0;
+}
+
+.link_style {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  .link_style:hover {
+    color: inherit;
+    text-decoration: none;
+  }
