--- a/app/views/partials/_userheader.html.erb
+++ b/app/views/partials/_userheader.html.erb
@@ -9,7 +9,11 @@
 
     
     <div class="header_action">
-    
+     <% if page == "new_category"%>
+    <span onClick="submitNewCategory()">
+    Add
+    </span>
+    <% end %>
 
     </div>
 
