--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <body class="sessions_body">
 
-<%= render "partials/userheader", :title => "CATEGORIES" %>
+<%= render "partials/userheader", :title => "CATEGORIES", :page => "" %>
 
 <div class="category_page_container">
 
