--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,8 @@
 
   <div class="field">
   <div class="photo-field">
-    <img src="https://www.slotcharter.net/wp-content/uploads/2020/02/no-avatar.png" width="30" onClick="uploadButtonInfo()" />
-    <%= f.text_field :name, class: "sessions_input-photo", placeholder: "Upload Photo", id: "upload_photo" %>
+    <img src="https://www.slotcharter.net/wp-content/uploads/2020/02/no-avatar.png" width="30" />
+    <input class="sessions_input-photo" disabled placeholder="Upload Photo"/>
   </div>
   </div>
   
