Selector for Add Category (unfinished)

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,7 +5,7 @@
 <div class="category_page_container">
 
 
-<div class="total_category_container">
+<div class="total_category_container info_cursor">
 <div class="total_category_left">
 <ion-icon name="bookmark-outline" class="category_icon-total"></ion-icon>
 <span class="">Total categories</span>
