--- a/app/views/partials/_userheader.html.erb
+++ b/app/views/partials/_userheader.html.erb
@@ -14,6 +14,11 @@
     Add
     </span>
     <% end %>
+     <% if page == "new_transaction"%>
+    <span onClick="submitNewTransaction()">
+    Add
+    </span>
+    <% end %>
 
     </div>
 
