--- a/app/views/transactions/create.html.erb
+++ b/app/views/transactions/create.html.erb
@@ -1,1 +1,21 @@
-create a new transaction for a category
+<body class="sessions_body">
+
+<%= render "partials/userheader", :title => "NEW TRANSACTION", :page => "new_transaction" %>
+
+<%= form_with( model: @transactions, url: transactions_post_path, method: :post, local: true, id: "new_transaction") do |f| %>
+
+  <div class="field">
+    <%= f.text_field :name, class: "sessions_input", placeholder: "Transaction name" %>
+  </div>
+
+ 
+  <div class="field">
+  
+    <%= f.number_field :amount, class: "sessions_input", placeholder: "Transaction Amount" %>
+  </div>
+
+
+<% end %>
+
+
+</body>
