--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -10,9 +10,23 @@
 <span class="">Category Expenses</span>
 </div>
 
-<span class="total_category_number">$<%= @category.total_amount(@category.entity_categories) %></span>
+<span class="total_category_number">$<%= @category.total_amount(@category.entity_categories).round(2) %></span>
 
 </div>
+
+<% @transactions.each do |transaction|%>
+
+<div class="total_category_container">
+<div class="total_category_left">
+<ion-icon name="pricetags-outline" class="category_icon-item"></ion-icon>
+<span class=""><%=transaction.entity.name%></span>
+</div>
+
+<span class="total_category_number">$<%= transaction.entity.amount %></span>
+</div>
+
+<% end%>
+
 
 
 
