--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -7,7 +7,7 @@
 <div class="total_category_container info_cursor">
 <div class="total_category_left">
 <ion-icon name="cash-outline" class="category_icon-total"></ion-icon>
-<span class="">Category Expenses</span>
+<span class="">Total</span>
 </div>
 
 <span class="total_category_number">$<%= @category.total_amount(@category.entity_categories).round(2) %></span>
@@ -27,7 +27,8 @@
 
 <% end%>
 
-
+<div class="final_margin">
+</div>
 
 
 
