Update Selector CSS style

--- a/app/assets/stylesheets/categories_pages.css
+++ b/app/assets/stylesheets/categories_pages.css
@@ -84,3 +84,17 @@
 .info_cursor{
   cursor: help !important;
 }
+
+.field-select select {
+  
+  padding: 11px;
+    border: 1px solid lightgray;
+    max-width: 624px;
+    min-width: 315px;
+    width: 83%;
+  
+}
+
+.field-select select:focus {
+  outline: none;
+}
