--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -9,7 +9,7 @@
   </div>
 
  
-  <div class="field">
+  <div class="field field-select">
   
         <%= f.select(:icon, options_for_select(@icons)) %>
   </div>
