Message flash and UI ajustments

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,6 +2,9 @@
 
 <%= render "partials/userheader", :title => "CATEGORIES", :page => "" %>
 
+    <%= render 'partials/messageflash'%>
+
+
 <div class="category_page_container">
 
 
@@ -27,7 +30,8 @@
 
 <% end%>
 
-
+<div class="final_margin">
+</div>
 
 
 
