--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,9 @@
 <body class="sessions_body">
 <%= render "partials/userheader", :title => "TRANSACTIONS", :page => "" %>
 
+    <%= render 'partials/messageflash'%>
+
+
 <div class="category_page_container">
 
 
