--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,8 @@
 <body class="sessions_body">
 
 <%= render "partials/userheader", :title => "NEW CATEGORY", :page => "new_category" %>
+    <%= render 'partials/messageflash'%>
+
 
   <%= form_with( model: @category, url: categories_post_path, method: :post, local: true, id: "new_category") do |f| %>
 
