--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
 <body class="sessions_body">
 <%= render "partials/sessionsheaders", :message => "sign_up" %>
+    <%= render 'partials/messageflash'%>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), name: "signup") do |f| %>
 
