Drawer menu initial UI

--- a/app/views/partials/_userheader.html.erb
+++ b/app/views/partials/_userheader.html.erb
@@ -1,6 +1,7 @@
 <div class="header_container">
     <div class="back_container">
-        <ion-icon name="menu-outline"></ion-icon>
+        <%= render 'partials/drawermenu'%>
+
     </div>
 
     <div class="header_title">
