--- a/app/views/splash_screen/index.html.erb
+++ b/app/views/splash_screen/index.html.erb
@@ -3,7 +3,7 @@
 <div class="splash_container">
 <h1 class="splash_title">My Budget</h1>
 <div class="splash_button_container">
-<%= button_to "LOG IN", new_user_session_path, class: "log_in_button" %>
+<%= button_to "LOG IN", new_user_session_path, class: "log_in_button", method: :get%>
 <%= link_to 'SIGN IN',  new_user_registration_path, class: "sign_up_link" %>
 </div>
 
