--- a/app/views/partials/_sessionsheaders.html.erb
+++ b/app/views/partials/_sessionsheaders.html.erb
@@ -17,7 +17,7 @@
     
     <div class="header_action">
     <% if message == "sign_in"%>
-    <span onClick="submitLogIn()">
+    <span id="submitLogIn" onClick="submitLogIn()">
     Log In
     </span>
     <% else %>
